# OpenRenderGraph

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: OpenRenderGraphConfig.cmake.in
include/DebugUI/: MemoryIntrospectionWidget.h  MemoryViewWidget.h  RenderGraphInspector.h
include/Interfaces/: IDynamicDeclaredResources.h  IHasMemoryMetadata.h  IPassBuilder.h  IResourceProvider.h  IResourceResolver.h
include/Managers/: AsyncCopyPagePool.h  UploadInstance.h
include/OpenRenderGraph/: DebugUI.h  OpenRenderGraph.h
include/Render/: CommandListPool.h  DescriptorHeap.h  FeatureDomainRegistry.h  MemoryIntrospectionAPI.h  MemoryIntrospectionBackend.h  PassBuilders.h  PassExecutionContext.h  PassId.h  PassInputs.h  PipelineState.h  QueueKind.h  QueueRegistry.h  ResourceRegistry.h  ResourceRequirements.h  ShaderAPI.h
include/Render/ImmediateExecution/: ImmediateCommandList.h
include/Render/RenderGraph/: ExecutionSchedule.h  RenderGraph.h  RenderGraphCompileProfile.h
include/Render/RenderGraph/Aliasing/: RenderGraphAliasingSubsystem.h
include/Render/Runtime/: BufferUploadPolicy.h  DescriptorServiceAccess.h  DescriptorServiceTypes.h  IDescriptorService.h  IReadbackService.h  IRenderGraphSettingsService.h  IStatisticsService.h  ITaskService.h  IUploadPolicyService.h  IUploadService.h  OpenRenderGraphSettings.h  StatisticsTypes.h  StreamingUploadTypes.h  UploadPolicyServiceAccess.h  UploadServiceAccess.h  UploadTypes.h
include/RenderPasses/: ReadbackCapturePass.h  ReadbackCopyCapturePass.h  StreamingUploadPass.h
include/RenderPasses/Base/: ComputePass.h  CopyPass.h  PassReturn.h  RenderPass.h  ResourceDescriptorIndexHelper.h
include/Resources/: AliasingPlacement.h  BackedResource.h  DynamicResource.h  ExternalBackingResource.h  ExternalTextureResource.h  GloballyIndexedResource.h  HeapIndexInfo.h  MemoryStatisticsComponents.h  PixelBuffer.h  ReadbackRequest.h  Resource.h  ResourceGroup.h  ResourceIdentifier.h  ResourceStateTracker.h  Sampler.h  TextureDescription.h  TrackedAllocation.h
include/Resources/Buffers/: Buffer.h  DynamicBufferBase.h
include/Resources/GPUBacking/: GPUTextureBacking.h  GpuBufferBacking.h
include/Utilities/: ORGUtilities.h
src/: pch.h
src/DebugUI/: MemoryIntrospectionWidget.cpp  MemoryViewWidget.cpp  RenderGraphInspector.cpp  TextureDecoder.h  structFormatHelper.h
src/Managers/: CommandRecordingManager.cpp  UploadInstance.cpp
src/Managers/Singletons/: DescriptorHeapManager.cpp  DeviceManager.cpp  ReadbackManager.cpp  StatisticsManager.cpp  UploadManager.cpp
src/Render/: CommandListPool.cpp  DescriptorHeap.cpp  MemoryIntrospectionAPI.cpp  MemoryIntrospectionBackend.cpp  MemoryMetadataAdapter.cpp  PassBuilders.cpp  QueueRegistry.cpp
src/Render/ImmediateExecution/: ImmediateCommandList.cpp
src/Render/RenderGraph/: RenderGraph.cpp  RenderGraphCache.cpp  RenderGraphCompileProfile.cpp
src/Render/RenderGraph/Aliasing/: RenderGraphAliasingAlgorithms.cpp  RenderGraphAliasingSubsystem.cpp
src/Render/Runtime/: DefaultDescriptorService.cpp  DefaultReadbackService.cpp  DefaultRenderGraphSettingsService.cpp  DefaultStatisticsService.cpp  DefaultUploadPolicyService.cpp  DefaultUploadService.cpp
src/Resources/: ExternalBackingResource.cpp  PixelBuffer.cpp  ResourceStateTracker.cpp
src/Resources/Buffers/: Buffer.cpp  DynamicBufferBase.cpp
src/Resources/GPUBacking/: GPUTextureBacking.cpp  GpuBufferBacking.cpp
src/include/Managers/: CommandRecordingManager.h
src/include/Managers/Singletons/: DeletionManager.h  DescriptorHeapManager.h  DeviceManager.h  ECSManager.h  ReadbackManager.h  StatisticsManager.h  UploadManager.h
